platform_components/base/ns-istio-injection.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: <ns>
