platform_components/base/ns-peerauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "ns-peerauthentication"
  namespace: <ns>
spec:
  mtls:
    mode: DISABLE
